--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Hello React</title>
 </head>
 <body>
-  <div id="react-root"></div>
+  <div id="react-root">
+      
+  </div>
   <script src="/build/bundle.js"></script>
 </body>
 </html>
